# iptv-motor-core

./: .gitignore  CMakeLists.txt  INSTALL.md  config.json  users.json
scratch/: verify_channel_presets.py  verify_disable_input.py  verify_global_presets.py  verify_multiple_outputs.py  verify_output_packs.py
src/: engine.cpp  engine.h  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  network_utils.h  system_stats.h
www/: app.js  flight_plan.html  index.html  login.html  style.css
